--- a/index.html
+++ b/index.html
@@ -3,10 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wdd231 - Web Development 1</title>
+    <title>wdd231 Web Frontend Development 1 homepage</title>
+    <meta name="description" content="wdd231 Web Frontend Development 1 homepage- Benjamin Tetteh Ayiku">
+    <meta name="author" content="Benjamin Ayiku">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/courses.js" defer></script>
 </head>
 <body>
-    <h1>Wdd231 - Web Development 1</h1>
-    
+    <header>
+        <div class="LogoandName">
+            <img src="images/sitelogo.svg" alt="site logo" width="60" height="50">
+            <span>Benjamin Ayiku</span>
+            <button id="nav-button" class="hamburger" aria-label="navigation"></button>
+        </div>
+        <div class="nav">
+            <a href="index.html">Home</a>
+            <a href="Chamber.html">Chamber Project</a>
+            <a href="finalproject.html">Final Project</a>
+        </div>
+    </header>
+    <main>
+        <h1>Home</h1>
+        <div class="sections">
+            <section>
+                <h2>About Me</h2>
+                <p>My name is Benjamin Ayiku, and I'm from Ghana. I'm studying software development, but I'm also a collector of skills, currently adding French, chess strategy, and whatever wisdom I can find in books to my arsenal. I figure if I can think in multiple languages, plan several moves ahead, and debug complex code, I'll be pretty well-equipped for whatever comes next.</p>
+            </section>
+            <section>
+                <h2>Student Photo</h2>
+                <img src="images/myself.webp" alt="Benjamin">
+            </section>
+            <section class="sec3">
+                <h2>Web Certificate Course</h2>
+                <div class="courses">
+                    <a href=""><div  class="coursetitle" id="allCourses">All</div></a>
+                    <a href=""><div class="coursetitle" id="CSECourses">CSE</div></a>
+                    <a href=""><div class="coursetitle" id="WDDCourses">WDD</div></a>
+                </div>
+                
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="logos">
+             <a href="https://github.com/ayikubenjamin"><img src="images/github.svg" alt="github account" width="30" height="30"></a>
+             <a href="https://www.linkedin.com/in/benjamin-ayiku-tetteh/"><img src="images/linkedin.svg" alt="linkedin account" width="30" height="30"></a>
+             <a href="https://twitter.com"><img src="images/twitter-x.svg" alt="twitter-x account" width="30" height="30"></a>
+        </div>
+        <div class="dates">
+            <span id="currentyear"></span>
+            <p><span id="lastmodified"></span></p> 
+        </div>
+    </footer>
 </body>
-</html>
