correcting audit report

--- a/index.html
+++ b/index.html
@@ -14,50 +14,51 @@
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/courses.js" defer></script>
 </head>
-<body>
-    <header>
-        <div class="LogoandName">
-            <img src="images/sitelogo.svg" alt="site logo" width="60" height="50">
-            <span>Benjamin Ayiku</span>
-            <button id="nav-button" class="hamburger" aria-label="navigation"></button>
-        </div>
-        <div class="nav">
-            <a href="index.html">Home</a>
-            <a href="Chamber.html">Chamber Project</a>
-            <a href="finalproject.html">Final Project</a>
-        </div>
-    </header>
-    <main>
-        <h1>Home</h1>
-        <div class="sections">
-            <section>
-                <h2>About Me</h2>
-                <p>My name is Benjamin Ayiku, and I'm from Ghana. I'm studying software development, but I'm also a collector of skills, currently adding French, chess strategy, and whatever wisdom I can find in books to my arsenal. I figure if I can think in multiple languages, plan several moves ahead, and debug complex code, I'll be pretty well-equipped for whatever comes next.</p>
-            </section>
-            <section>
-                <h2>Student Photo</h2>
-                <img src="images/myself.webp" alt="Benjamin">
-            </section>
-            <section class="sec3">
-                <h2>Web Certificate Course</h2>
-                <div class="courses">
-                    <a href=""><div  class="coursetitle" id="allCourses">All</div></a>
-                    <a href=""><div class="coursetitle" id="CSECourses">CSE</div></a>
-                    <a href=""><div class="coursetitle" id="WDDCourses">WDD</div></a>
-                </div>
-                
-            </section>
-        </div>
-    </main>
-    <footer>
-        <div class="logos">
-             <a href="https://github.com/ayikubenjamin"><img src="images/github.svg" alt="github account" width="30" height="30"></a>
-             <a href="https://www.linkedin.com/in/benjamin-ayiku-tetteh/"><img src="images/linkedin.svg" alt="linkedin account" width="30" height="30"></a>
-             <a href="https://twitter.com"><img src="images/twitter-x.svg" alt="twitter-x account" width="30" height="30"></a>
-        </div>
-        <div class="dates">
-            <span id="currentyear"></span>
-            <p><span id="lastmodified"></span></p> 
-        </div>
-    </footer>
-</body>
+    <body>
+        <header>
+            <div class="LogoandName">
+                <img src="images/sitelogo.svg" alt="site logo" width="60" height="50">
+                <span>Benjamin Ayiku</span>
+                <button id="nav-button" class="hamburger" aria-label="navigation"></button>
+            </div>
+            <div class="nav">
+                 <a href="index.html">Home</a>
+                 <a href="chamber.html">Chamber Project</a>
+                <a href="finalproject.html">Final Project</a>   
+            </div>
+        </header>
+        <main>
+            <h1>Home</h1>
+            <div class="sections">
+                <section>
+                    <h2>About Me</h2>
+                    <p>My name is Benjamin Ayiku, and I'm from Ghana. I'm studying software development, but I'm also a collector of skills, currently adding French, chess strategy, and whatever wisdom I can find in books to my arsenal. I figure if I can think in multiple languages, plan several moves ahead, and debug complex code, I'll be pretty well-equipped for whatever comes next.</p>
+                </section>
+                <section>
+                    <h2>Student Photo</h2>
+                    <img src="images/myself.webp" alt="Benjamin">
+                </section>
+                <section class="sec3">
+                    <h2>Web Certificate Course</h2>
+                    <div class="courses">
+                        <a href=""><div  class="coursetitle" id="allCourses">All</div></a>
+                        <a href=""><div class="coursetitle" id="CSECourses">CSE</div></a>
+                        <a href=""><div class="coursetitle" id="WDDCourses">WDD</div></a>
+                    </div>
+                    
+                </section>
+            </div>
+        </main>
+        <footer>
+            <div class="logos">
+                <a href="https://github.com/ayikubenjamin"><img src="images/github.svg" alt="github account" width="30" height="30"></a>
+                <a href="https://www.linkedin.com/in/benjamin-ayiku-tetteh/"><img src="images/linkedin.svg" alt="linkedin account" width="30" height="30"></a>
+                <a href="https://twitter.com"><img src="images/twitter-x.svg" alt="twitter-x account" width="30" height="30"></a>
+            </div>
+            <div class="dates">
+                <span id="currentyear"></span>
+                <p><span id="lastmodified"></span></p> 
+            </div>
+        </footer>
+    </body>
+</html>
