--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>wdd231 Web Frontend Development 1 homepage</title>
     <meta name="description" content="wdd231 Web Frontend Development 1 homepage- Benjamin Tetteh Ayiku">
     <meta name="author" content="Benjamin Ayiku">
+    <meta property="og:title" content="Benjamin">
+    <meta property="og:description" content="Personal website for Benjamin. Showing his Portfolio for wdd231 course.">
+    <meta property="og:url" content="https://ayikubenjamin.github.io/wdd231/">
+    <meta property="og:image" content="images/myself.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/courses.js" defer></script>
 </head>
@@ -20,12 +25,12 @@
                 <img src="images/sitelogo.svg" alt="site logo" width="60" height="50">
                 <span>Benjamin Ayiku</span>
                 <button id="nav-button" class="hamburger" aria-label="navigation"></button>
-            </div>
-            <div class="nav">
+            </div><div class="nav">
                  <a href="index.html">Home</a>
                  <a href="chamber.html">Chamber Project</a>
                 <a href="finalproject.html">Final Project</a>   
             </div>
+            
         </header>
         <main>
             <h1>Home</h1>
