week 2 final delivery

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,10 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/directory.css">
-    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
     <script src="scripts/dates.js" defer></script>
-    <script src="scripts/courses.js" defer></script>
+    <script src="scripts/display.js" defer></script>
 </head>
 <body>
     <header>
@@ -33,7 +32,17 @@
             </nav>
         </div>    
     </header>
-    <main></main>
+    <main>
+        <div class="NandB">
+            <h2>Directory</h2>
+            <div class="buttons">
+                <button id="gbutton">Grid</button>
+                <button id="lbutton">List</button>
+            </div>
+        </div>
+        <div class="membersContainer"></div>
+        
+    </main>
     <footer>
         <div class="info">
             <p><strong>Accra Chamber of Commerce</strong></p>
