--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Accra Chamber of Commerce directory page">
     <meta name="author" content="Benjamin Ayiku">
     <meta property="og:title" content="Benjamin">
-    <meta property="og:description" content="Accra chamber of Commerce directory page showing list of business and their contacts">
+    <meta property="og:description" content="Accra chamber of Commerce directory page showing list of business located in Accra, services they offer and their phone number and email address">
     <meta property="og:url" content="https://ayikubenjamin.github.io/wdd231/chamber/directory.html">
     <meta property="og:image" content="images/myself.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,3 +63,4 @@
         </div>
     </footer>
 </body>
+</html>
