--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/directory.css">
     <link rel="icon" href="favicon.ico">
     <script src="scripts/dates.js" defer></script>
-    <script src="scripts/display.js" defer></script>
+    <script type="module" src="scripts/display.js" defer></script>
 </head>
 <body>
     <header>
