--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="finalproject.html">Discover</a>
-                <a href="finalproject.html">Join</a>   
+                <a href="join.html">Join</a>   
             </nav>
         </div>    
     </header>
