--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     
                 </section>
             </div>
+            <dialog id="coursedetails"></dialog>
         </main>
         <footer>
             <div class="logos">
