--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -17,6 +17,9 @@
     <link rel="icon" href="favicon.ico">
     <script src="scripts/dates.js" defer></script>
     <script type="module" src="scripts/display.js" defer></script>
+    <script type="module" src="scripts/homedisplay.js" defer></script>
+    <script src="scripts/join.js" defer></script>
+    <script src="scripts/thankyou.js" defer></script>
 </head>
 <body>
     <header>
@@ -33,15 +36,18 @@
         </div>    
     </header>
     <main>
-        <div class="NandB">
-            <h2>Directory</h2>
-            <div class="buttons">
-                <button id="gbutton">Grid</button>
-                <button id="lbutton">List</button>
-            </div>
-        </div>
-        <div class="membersContainer"></div>
-        
+        <h1>Thank You!</h1>
+        <p>Your form has been successfully submitted.</p>
+        <p>We appreciate your time and will get back to you soon.</p>
+        <p><strong>First Name:</strong> <span id="fname"></span></p>
+        <p><strong>Last Name:</strong> <span id="lname"></span></p>
+        <p><strong>Email:</strong> <span id="email"></span></p>
+        <p><strong>Mobile Number:</strong> <span id="phone"></span></p>
+        <p><strong>Business Name:</strong> <span id="business"></span></p>
+        <p><strong>Membership Level:</strong> <span id="mlevel"></span></p>
+        <p><strong>Date Submitted:</strong> <span id="timestamp"></span></p>
+
+        <a href="index.html">Return to Home</a>
     </main>
     <footer>
         <div class="info">
