--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,7 +27,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
-                <a href="finalproject.html">Discover</a>
+                <a href="discover.html">Discover</a>
                 <a href="join.html">Join</a>   
             </nav>
         </div>    
