--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <button id="nav-button" class="hamburger" aria-label="navigation"></button>
             </div><div class="nav">
                  <a href="index.html">Home</a>
-                 <a href="chamber.html">Chamber Project</a>
-                <a href="finalproject.html">Final Project</a>   
+                 <a href="chamber/index.html">Chamber Project</a>
+                <a href="projects/index.html">Final Project</a>   
             </div>
             
         </header>
