--- a/projects/order.html
+++ b/projects/order.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="wdd131 Dynamic Web Fundamentals Final Project- Benjamin Tetteh Ayiku">
     <meta name="author" content="Benjamin Ayiku">
+    <meta property="og:title" content="Read Haven website">
+    <meta property="og:description" content="Read Haven Home page providing information of a bookshop called Read Haven located in Accra, the site gives information on the books collection available and order service.">
+    <meta property="og:url" content="https://ayikubenjamin.github.io/wdd231/projects/index.html">
+    <meta property="og:image" content="images/logo.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script type="module" src="scripts/orderform.js" defer></script>
     <script src="scripts/dates.js" defer></script>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/projectlarge.css">
     <link rel="stylesheet" href="styles/mobile.css">
     <title>Read Haven Website</title>
